# league_data_etl

./: .gitignore  docker-compose.yml  main.py  pyproject.toml
config/: .env
data/: matchs_ids.json  players.json  timeline.json
notebook/: analysis_data.ipynb
src/: consume_matches.py  extract_data.py  extract_players_match.py
